--- a/petproject/package.json
+++ b/petproject/package.json
@@ -10,6 +10,7 @@
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
     "react-scripts": "^0.0.0",
     "web-vitals": "^2.1.4"
